--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,7 @@
 .jobDetails-main{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 
   padding: 30px;
@@ -11,11 +11,11 @@
 
 .cards-main{
 background-color: antiquewhite;
-height: 500px;
+height: auto;
 width: 410px;
 padding: 5px 5px 5px 5px;
-transform: matrix(1.01, 0, 0, 1.01, 0, 0);
-transition: all 0.2s ease-in-out 0s;
+/* transform: matrix(1.01, 0, 0, 1.01, 0, 0);
+transition: all 0.2s ease-in-out 0s; */
 outline: rgba(0, 0, 0, 0.87) dashed 0px;
 box-sizing: border-box;
 box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 4px 0px;
