--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -4,7 +4,7 @@
   /* justify-content: center; */
   align-items: center;
   line-height: 20px;
-  padding: 30px;
+  padding: 0px 20px;
   gap: 80px;
 
 }
